# ChangeLog for dev-python/gtkhtml-python
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gtkhtml-python/ChangeLog,v 1.21 2011/02/26 13:23:21 eva Exp $

  26 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org>
  -gtkhtml-python-2.19.1.ebuild, gtkhtml-python-2.25.3.ebuild:
  Add missing eclass variables for proper python-updater behavior, bug #344833.
  Clean up old revision.

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> gtkhtml-python-2.25.3.ebuild:
  alpha/ia64/sparc stable wrt #348987

  10 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  gtkhtml-python-2.25.3.ebuild:
  ppc64 stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org>
  gtkhtml-python-2.25.3.ebuild:
  Marked ppc for bug #324077.

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  gtkhtml-python-2.25.3.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> gtkhtml-python-2.25.3.ebuild:
  amd64 stable, bug 324077

  20 Jul 2010; Jeroen Roovers <jer@gentoo.org> gtkhtml-python-2.19.1.ebuild,
  gtkhtml-python-2.25.3.ebuild:
  Drop HPPA keywording (bug #324511).

  11 Jul 2010; Pacho Ramos <pacho@gentoo.org> gtkhtml-python-2.19.1.ebuild:
  Drop hppa keyword per bug #324511.

*gtkhtml-python-2.25.3 (14 Jun 2010)

  14 Jun 2010; Pacho Ramos <pacho@gentoo.org> +gtkhtml-python-2.25.3.ebuild:
  Version bump with lots of bugfixes over current stable.

  02 Jun 2010; Gilles Dartiguelongue <eva@gentoo.org>
  gtkhtml-python-2.19.1.ebuild:
  Update to use EAPI=2 due to eclass changes.

  25 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  gtkhtml-python-2.19.1.ebuild:
  keyword ~x86-fbsd

  23 Mar 2009; Jeroen Roovers <jer@gentoo.org> gtkhtml-python-2.19.1.ebuild:
  Stable for HPPA (bug #258040).

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gtkhtml-python-2.19.1.ebuild:
  ia64/sparc stable wrt #258040

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  gtkhtml-python-2.19.1.ebuild: