@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/gtkhtml-python
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gtkhtml-python/ChangeLog,v 1.21 2011/02/26 13:23:21 eva Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gtkhtml-python/ChangeLog,v 1.22 2012/02/24 08:57:50 patrick Exp $
+
+  24 Feb 2012; Patrick Lauer <patrick@gentoo.org> gtkhtml-python-2.25.3.ebuild:
+  Restricting pypy and jython
 
   26 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org>
   -gtkhtml-python-2.19.1.ebuild, gtkhtml-python-2.25.3.ebuild:
